# IR-White-Board

./: .gitignore  CMakeLists.txt  README.md  build.sh  index.html  irwb_tools.cmake  params.json
apps/: CMakeLists.txt
apps/irboard/: CMakeLists.txt
apps/irboard/resorces/: MainResource.qrc
apps/irboard/src/: C_AboutWindow.h  C_CalibrationWindow.h  C_CoordinateTransform.cpp  C_DisplayMouse.cpp  C_MainWindow.cpp  C_MainWindow.h  C_SettingsWindow.cpp  C_SettingsWindow.h  SmartPen.cpp  licenter.cpp  licenter.h  main.cpp  matrix.h
apps/irboard/ui/: MainWindow.ui
data/: config.json
ir-tester/: CMakeLists.txt
ir-tester/src/: main.cpp
irboard/: CMakeLists.txt
irboard/py/: ErrorLogWindow.py  MainResource_rc.py  MainWindow.py  SettingsWindow.py  config.json  main.py  prepare.py
irboard/resources/: MainResource.qrc  res.rc
irboard/src/: AboutWindow.cpp  AboutWindow.h  C_AboutWindow.cpp  C_CalibrationWindow.cpp  C_CoordinateTransform.h  C_DisplayMouse.h  C_RawMouse.cpp  C_RawMouse.h  CalibrationWindow.cpp  CalibrationWindow.h  CoordConverter.h  CoordinateConverter.cpp  CoordinateConverter.h  IrCameraProcessor.cpp  IrCameraProcessor.h  IrMouse.cpp  IrMouse.h  MainWindow.cpp  MainWindow.h  Platform.cpp  Platform.h  RemoteVariable.cpp  RemoteVariable.h  SettingsWindow.cpp  SettingsWindow.h  SmartPen.cpp  Transformator.cpp  Transformator.h  Transformer.cpp  Transformer.h  WinPlatform.cpp  WinPlatform.h  matrix.cpp  precompiled_headers.cpp  precompiled_headers.h
irboard/ui/: AboutWindow.ui  ErrorLogWindow.ui  MainWindow.ui  SettingsWindow.ui  lic.ui
libirboard/: CMakeLists.txt  ImageOutput.cpp  ImageOutput.h  IrBoard.cpp  IrBoard.h  IrBoard.i
